fix some static values and change overflow value for intern list

--- a/src/screens/EmployerDashboard/employerdashboard.scss
+++ b/src/screens/EmployerDashboard/employerdashboard.scss
@@ -11,7 +11,7 @@
   }
 
   & .tableContainer {
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     height: 85%;
 
